[metadata]
name          = reach-rpc-client
version       = file:VERSION
description   = JSON-RPC client to your DApp + the Reach standard library
url           = https://github.com/reach-sh/reach-lang/tree/master/rpc-client/py#reach-rpc-client
license       = Apache-2.0
license_files = LICENSE
author        = reach.sh
author_email  = pkgs@reach.sh

keywords =
  reach
  dsl
  blockchain
  ethereum
  algorand
  dapps

long_description              = file:README.md
long_description_content_type = text/markdown

project_urls =
  Documentation = https://docs.reach.sh/ref-frontends-rpc-py.html
  Issues        = https://github.com/reach-sh/reach-lang/issues

classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent


[options]
python_requires = >=3.7
packages        = find:

package_dir =
  = src

install_requires =
  certifi  ==2020.12.5
  chardet  ==4.0.0
  idna     ==2.10
  requests ==2.25.1
  urllib3  ==1.26.2



[options.packages.find]
where = src
